Add calendar & today views, update contact/opportunities/card/spreadsheet templates, app.py changes, logo update

--- a/templates/opportunities.html
+++ b/templates/opportunities.html
@@ -782,13 +782,11 @@
     <aside class="sidebar">
       <ul class="sidebar-menu">
         <li><a href="/" class="sidebar-item">Today</a></li>
-        <li><span class="sidebar-item disabled">Calendar</span></li>
+        <li><a href="/calendar" class="sidebar-item">Calendar</a></li>
         <li><a href="/contacts" class="sidebar-item">Contacts</a></li>
-        <li><span class="sidebar-item disabled">Reports</span></li>
         <li class="active"><a href="/opportunities" class="sidebar-item">Opportunities</a></li>
-        <li><a href="/seminars" class="sidebar-item">Seminars</a></li>
-        <li><span class="sidebar-item disabled">Workflows</span></li>
         <li><a href="/analytics&reports" class="sidebar-item">Analytics & Reports</a></li>
+        <li><a href="/seminars" class="sidebar-item">Seminars</a></li>
       </ul>
     </aside>
 
